--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,12 +1,12 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
-@font-face {
+/* @font-face {
     font-family: 'Lato';
     font-style: italic;
     font-weight: 100;
     src: url(https://fonts.gstatic.com/s/lato/v24/S6u-w4BMUTPHjxsIPx-mPCLQ7A.woff2) format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
+} */
 
 :root {
 
@@ -80,19 +80,20 @@ html {
   scroll-behavior: smooth;
   font-size: 100%;
 }
+
 body {
-    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-    margin: 0;
-    padding: 0;
-    text-size-adjust: var(--fs-500);
-    color: var(--clr-text-200);
-    text-decoration: none;
-    background-color: var(--clr-primary-600);
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    position: relative;
-    z-index: 1000;
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  margin: 0;
+  padding: 0;
+  text-size-adjust: var(--fs-500);
+  color: var(--clr-text-200);
+  text-decoration: none;
+  background-color: var(--clr-primary-600);
+  /* text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+  position: relative;
+  z-index: 1000;
 }
 
 header, main, footer {
@@ -102,8 +103,11 @@ header, main, footer {
 
 header {
     background-color: var(--clr-primary-500);
+    color: #cfa77a;
     padding: 1rem 0;
     position: fixed;
+    border-bottom: 1px solid #e1e4e8;
+    padding: 20px 0;
     width: 100%;
     z-index: 1000;
 }
@@ -118,74 +122,66 @@ header {
 }
 
 .container {
-  text-align: center;
-  padding: 20px;
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
+  max-width: 1200px;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  background:var(--clr-primary-600);
+  border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+.logo img{
+    height: 40px;
+    border-radius: 50%;
 }
 
 nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2rem;
-}
-nav.right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-nav .right ul {
-    display: flex;
-    padding: 10px 0;
-}
-.logo img{
-    max-height: 50px;
-    border-radius: 50%;
-
+    border-radius: 8px;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 0 auto; /* Center the nav */
 }
 
-.nav-links {
-    font-size: 1.8rem;
-    list-style:none;
+nav a {
+  color: white;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  margin: 0 15px;
+  transition: color 0.3s ease;
 }
 
-.nav-links li {
-    margin-left: 2rem;
-}
-
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-
-.nav-links a:hover {
+nav a:hover {
     color: var(--clr-primary-400);
+    text-decoration: underline;
 }
 
 .search-container {
     display: flex;
     align-items: center;
-    justify-content: right;
+    margin-left: auto;
     border-radius: 20% 20% 20% 20% auto;
 }
 
 .search-container button {
   background-color: #cfa77a;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 5px 5px;
+  padding: 5px 15px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  /* padding-right: 5px; */
   font-size: 14px;
-  min-height: 36px;
-  width: fit-content;
   margin-left: 10px;
 }
 
@@ -194,12 +190,11 @@ nav .right ul {
 }
 
 .search-container input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid var(--primary-color);
-    border-radius: 10px 10px 10px  10px;
-    outline: none;
-    display: flex;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid var(--primary-color);
+  border-radius: 10px 10px 10px  10px;
+  outline: none;
 }
 
 .hero {
@@ -227,83 +222,220 @@ nav .right ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 2.5rem;
-  }
-
-  .feature {
-    background-color: white;
-    border-radius: 10px;
-    padding: 2.5rem;
-    text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-  }
-
-  .feature:hover {
-    transform: translateY(-5px);
-  }
-
-  .feature i {
-    font-size: 3.5rem;
-    color: var(--secondary-color);
-    margin-bottom: 1.5rem;
-  }
-
-  .feature h3 {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-  }
-
-  .about {
-    display: flex;
-    justify-content: space-around;
-    max-width: 1200px;
-    margin: 0 auto;
-    flex-wrap: wrap;
-  }
-
-  .members {
-    flex-basis: 30%;
-    margin-bottom: 2rem;
-  }
-
-  .members li {
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--accent-color);
-    margin-bottom: 1rem;
-  }
-
-  footer {
-    background-color: var(--primary-color);
-    color: var(--neutral-color);
-    text-align: center;
-    padding: 1rem;
-    margin-top: 4rem;
-    margin-bottom: 0.1rem;
-  }
-
-  @keyframes fadeInUp {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-
-  .fade-in-up {
-    animation: fadeInUp 1s ease-out;
-  }
-
-  .status-code {
-    font-size: 90px;
-    color: orangered;
 }
 
-.status-msg {
-    font-size: 22px;
+.feature {
+  background-color: white;
+  border-radius: 10px;
+  padding: 2.5rem;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.feature:hover {
+  transform: translateY(-5px);
+}
+
+.feature i {
+  font-size: 3.5rem;
+  color: var(--secondary-color);
+  margin-bottom: 1.5rem;
+}
+
+.feature h3 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+.about {
+  width: 80%;
+  margin: 0 auto;
+  color: #d9d9d9;
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-size: 2em;
+  color: #ecf0f1;
+}
+
+.team-members {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+
+.team-member-card {
+  background: #34495e;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  width: 300px;
+  margin: 20px;
+  transition: transform 0.3s ease;
+  color: #ecf0f1;
+}
+
+.team-member-card:hover {
+  transform: scale(1.05);
+}
+
+.member-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.member-info {
+  padding: 15px;
+  background-color: #2c3e50;
+}
+
+.member-info h3 {
+  margin: 0 0 10px;
+  font-size: 1.5em;
+}
+
+.member-info p {
+  font-size: 0.9em;
+  color: #bdc3c7;
+}
+
+.member-info a {
+  text-decoration: none;
+  color: #1abc9c;
+}
+
+.member-info a:hover {
+  text-decoration: underline;
+}
+
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin: 4rem 5vw;
+  padding: 0;
+  list-style-type: none;
+}
+
+.card {
+    position: relative;
+    display: block;
+    height: 100%;
+    border-radius: 40px;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.card-image {
+    width: 100%;
+    height: auto;
+}
+
+.card-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: 40px;
+    background-color: #3f7ca8;
+    transform: translateY(100%);
+    transition: .2s ease-in-out;
+}
+
+.card:hover .card-overlay {
+    transform: translateY(0%);
+}
+
+.card-arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1;
+}
+
+.card-details {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding: 2em;
+    border-radius: 40px 0 0 0;
+    background-color: #3f7ca8;
+    transform: translateY(-100%);
+    transition: .2s ease-in-out;
+}
+
+.card-thumbnail {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.card-title {
+    font-size: 1.2em;
+    margin: 0 0 .3em;
+    color: #ededed;
+}
+
+.card-creation-date {
+    font-size: 1em;
+    color: #ededed;
+}
+
+.card-description {
+    padding: 0 2em 2em;
+    margin: 0;
+    color: #ededed;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
+
+footer {
+  position: fixed; /* Ensure footer stays at the bottom */
+  bottom: 0;
+  background-color: var(--primary-color);
+  color: var(--neutral-color);
+  text-align: center;
+  margin-bottom: 0.1rem; 
+  display: flex; /* Use flexbox for alignment */
+  align-items: center;
+  justify-content: center;
+  width: 100%; /* Ensure the footer spans the full width */
+  border-radius: 20px; /* Changed from percentage to px */
+  padding: 10px 0;
+  padding-bottom: 20px;
+}
+.footer-container {
+  display: grid;
+  place-items: center;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-up {
+  animation: fadeInUp 1s ease-out;
 }
 
 @media (max-width: 430px) {
