feat: add band members section with mock data to one-band.html

--- a/templates/one-band.html
+++ b/templates/one-band.html
@@ -7,6 +7,69 @@
     <link rel="stylesheet" href="../static/style/one-band.css">
 </head>
 <body>
+    <!-- Members -->
+    <div class="members">
+        <div class="member-container">
+            <h3>Mamonas Band Members</h3>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+            <div class="list">
+                <div class="rank"><span>1</span></div>
+                <div class="one-member">
+                    <h4>Rob Mcenna</h4>
+                    <p>Joined the band in 1990</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Locations -->
     <div class="timeline">
         {{range $index := .Data.Locations}}
         {{range $i, $location := $index}}
