feat: implement range over relation data style: add style to timeline section

--- a/templates/band.html
+++ b/templates/band.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../static/style/one-band.css">
 </head>
 <body>
-    <h3>About {{.Band.Artist.Name}}</h3>
+    <h3 style="color: white;">About {{.Band.Artist.Name}}</h3>
     <!-- Members -->
     <div class="members">
         
@@ -27,13 +27,27 @@
         </div>
         
     </div>
-    <p>Venues</p>
-    {{range $loc := .Band.Location.Venues}}
-       <p>{{$loc}}</p>
+    <h3 style="color: white;">Venues</h3>
+    {{range $loc := .Band.Location.Location}}
+       <p style="color: white;">{{$loc}}</p>
     {{end}}
-
-    
-    
+    <!-- Locations -->
+    <h3 style="color: white;">Relation</h3>
+    <div class="timeline">
+        {{range $loc, $dates := .Band.Relation.DateLocs}}        
+            <div class="timeline-container left-box">
+                <img src="{{$.Band.Artist.Image}}" alt="Band logo">
+                <div class="text-box">
+                    <h2 style="color: black;">Venue: {{$loc}}</h2>
+                    <small>This band made their first album in {{$.Band.Artist.FirstAlbum}}</small>
+                    <h3>Dates:</h3>
+                    {{range $dates}}
+                        <p>{{.}}</p>
+                    {{end}}
+                </div>
+            </div>
+        {{end}}
+    </div>
     <footer>
         <div>
             <p>&copy; 2024 Groupie Tracker. All rights reserved.</p>
